adds 2023-02-28 notebooks and a peak finder plot with associated functions in hplc_dad_plots.py
Former-commit-id: 71811a8289e0754dd24667fcbb5d94c253b76ea3
Former-commit-id: 82a429b7a2ca1b0c79c4b9b6f46e6d6d397c0b35

--- a/notebooks/2023-02-28_trying_to_model_3d_surfaces.ipynb
+++ b/notebooks/2023-02-28_trying_to_model_3d_surfaces.ipynb
@@ -1,11 +1,51 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1c0f929-643e-4879-91ad-4655c6336ff3",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-02-28T03:20:16.636692Z",
+     "iopub.status.busy": "2023-02-28T03:20:16.636370Z",
+     "iopub.status.idle": "2023-02-28T03:20:16.668732Z",
+     "shell.execute_reply": "2023-02-28T03:20:16.668107Z",
+     "shell.execute_reply.started": "2023-02-28T03:20:16.636670Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a7efd6f9-75f5-4bd6-83b0-f9c36be692f4",
    "metadata": {},
    "source": [
     "# 2023-02-28 Trying to get Surface Plots Working"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57d06fa9-88bc-47cc-8750-5a8b725b4455",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-02-28T03:28:16.341450Z",
+     "iopub.status.busy": "2023-02-28T03:28:16.340864Z",
+     "iopub.status.idle": "2023-02-28T03:28:16.351372Z",
+     "shell.execute_reply": "2023-02-28T03:28:16.350445Z",
+     "shell.execute_reply.started": "2023-02-28T03:28:16.341402Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.getcwd()"
    ]
   },
   {
@@ -31,11 +71,11 @@
    "id": "16ddc69b-4892-4659-a79f-3e22cc6830e0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T01:40:48.938979Z",
-     "iopub.status.busy": "2023-02-28T01:40:48.938327Z",
-     "iopub.status.idle": "2023-02-28T01:40:54.203209Z",
-     "shell.execute_reply": "2023-02-28T01:40:54.202782Z",
-     "shell.execute_reply.started": "2023-02-28T01:40:48.938927Z"
+     "iopub.execute_input": "2023-02-28T03:27:25.615152Z",
+     "iopub.status.busy": "2023-02-28T03:27:25.614575Z",
+     "iopub.status.idle": "2023-02-28T03:27:25.640454Z",
+     "shell.execute_reply": "2023-02-28T03:27:25.638632Z",
+     "shell.execute_reply.started": "2023-02-28T03:27:25.615108Z"
     },
     "tags": []
    },
@@ -95,10 +135,10 @@
    "id": "3c998ef2-76c8-42ba-a269-c35182f5a835",
    "metadata": {
     "execution": {
-     "iopub.status.busy": "2023-02-28T01:40:28.768924Z",
-     "iopub.status.idle": "2023-02-28T01:40:28.769194Z",
-     "shell.execute_reply": "2023-02-28T01:40:28.769092Z",
-     "shell.execute_reply.started": "2023-02-28T01:40:28.769080Z"
+     "iopub.status.busy": "2023-02-28T03:13:31.084864Z",
+     "iopub.status.idle": "2023-02-28T03:13:31.085093Z",
+     "shell.execute_reply": "2023-02-28T03:13:31.085011Z",
+     "shell.execute_reply.started": "2023-02-28T03:13:31.085001Z"
     },
     "tags": []
    },
@@ -138,10 +178,10 @@
    "id": "cfe0b5c8-b98c-4ac4-a62f-69078e82b7cb",
    "metadata": {
     "execution": {
-     "iopub.status.busy": "2023-02-28T01:40:28.769709Z",
-     "iopub.status.idle": "2023-02-28T01:40:28.769861Z",
-     "shell.execute_reply": "2023-02-28T01:40:28.769785Z",
-     "shell.execute_reply.started": "2023-02-28T01:40:28.769776Z"
+     "iopub.status.busy": "2023-02-28T03:13:31.085842Z",
+     "iopub.status.idle": "2023-02-28T03:13:31.085999Z",
+     "shell.execute_reply": "2023-02-28T03:13:31.085920Z",
+     "shell.execute_reply.started": "2023-02-28T03:13:31.085912Z"
     },
     "tags": []
    },
@@ -174,10 +214,10 @@
    "id": "01ebaa10-9428-4a18-9a39-fc73337f60c8",
    "metadata": {
     "execution": {
-     "iopub.status.busy": "2023-02-28T01:40:28.770249Z",
-     "iopub.status.idle": "2023-02-28T01:40:28.770390Z",
-     "shell.execute_reply": "2023-02-28T01:40:28.770318Z",
-     "shell.execute_reply.started": "2023-02-28T01:40:28.770310Z"
+     "iopub.status.busy": "2023-02-28T03:13:31.086636Z",
+     "iopub.status.idle": "2023-02-28T03:13:31.086804Z",
+     "shell.execute_reply": "2023-02-28T03:13:31.086723Z",
+     "shell.execute_reply.started": "2023-02-28T03:13:31.086714Z"
     },
     "tags": []
    },
@@ -202,10 +242,10 @@
    "id": "7075027f-d93c-4368-b894-7044a62084a7",
    "metadata": {
     "execution": {
-     "iopub.status.busy": "2023-02-28T01:40:28.770865Z",
-     "iopub.status.idle": "2023-02-28T01:40:28.771019Z",
-     "shell.execute_reply": "2023-02-28T01:40:28.770943Z",
-     "shell.execute_reply.started": "2023-02-28T01:40:28.770935Z"
+     "iopub.status.busy": "2023-02-28T03:13:31.087343Z",
+     "iopub.status.idle": "2023-02-28T03:13:31.087511Z",
+     "shell.execute_reply": "2023-02-28T03:13:31.087429Z",
+     "shell.execute_reply.started": "2023-02-28T03:13:31.087421Z"
     },
     "tags": []
    },
@@ -230,10 +270,10 @@
    "id": "3555c052-6378-4457-bae8-872428b9dae6",
    "metadata": {
     "execution": {
-     "iopub.status.busy": "2023-02-28T01:40:28.771596Z",
-     "iopub.status.idle": "2023-02-28T01:40:28.771762Z",
-     "shell.execute_reply": "2023-02-28T01:40:28.771683Z",
-     "shell.execute_reply.started": "2023-02-28T01:40:28.771674Z"
+     "iopub.status.busy": "2023-02-28T03:13:31.087899Z",
+     "iopub.status.idle": "2023-02-28T03:13:31.088067Z",
+     "shell.execute_reply": "2023-02-28T03:13:31.087992Z",
+     "shell.execute_reply.started": "2023-02-28T03:13:31.087983Z"
     },
     "tags": []
    },
@@ -275,10 +315,10 @@
    "id": "96abc1d1-2d14-40df-9008-6026d4fbba6d",
    "metadata": {
     "execution": {
-     "iopub.status.busy": "2023-02-28T01:40:28.772157Z",
-     "iopub.status.idle": "2023-02-28T01:40:28.772357Z",
-     "shell.execute_reply": "2023-02-28T01:40:28.772282Z",
-     "shell.execute_reply.started": "2023-02-28T01:40:28.772274Z"
+     "iopub.status.busy": "2023-02-28T03:13:31.088465Z",
+     "iopub.status.idle": "2023-02-28T03:13:31.088600Z",
+     "shell.execute_reply": "2023-02-28T03:13:31.088530Z",
+     "shell.execute_reply.started": "2023-02-28T03:13:31.088523Z"
     },
     "tags": []
    },
@@ -326,10 +366,10 @@
    "id": "3201947d-955b-45b5-8ee4-270a2be961c7",
    "metadata": {
     "execution": {
-     "iopub.status.busy": "2023-02-28T01:40:28.772818Z",
-     "iopub.status.idle": "2023-02-28T01:40:28.772974Z",
-     "shell.execute_reply": "2023-02-28T01:40:28.772897Z",
-     "shell.execute_reply.started": "2023-02-28T01:40:28.772887Z"
+     "iopub.status.busy": "2023-02-28T03:13:31.089141Z",
+     "iopub.status.idle": "2023-02-28T03:13:31.089280Z",
+     "shell.execute_reply": "2023-02-28T03:13:31.089208Z",
+     "shell.execute_reply.started": "2023-02-28T03:13:31.089200Z"
     },
     "tags": []
    },
@@ -364,10 +404,10 @@
    "id": "7337b0d7-fa9d-4c94-b730-98e5d053a85e",
    "metadata": {
     "execution": {
-     "iopub.status.busy": "2023-02-28T01:40:28.773599Z",
-     "iopub.status.idle": "2023-02-28T01:40:28.773746Z",
-     "shell.execute_reply": "2023-02-28T01:40:28.773673Z",
-     "shell.execute_reply.started": "2023-02-28T01:40:28.773665Z"
+     "iopub.status.busy": "2023-02-28T03:13:31.089747Z",
+     "iopub.status.idle": "2023-02-28T03:13:31.089899Z",
+     "shell.execute_reply": "2023-02-28T03:13:31.089822Z",
+     "shell.execute_reply.started": "2023-02-28T03:13:31.089814Z"
     },
     "tags": []
    },
