huge changes, have refactored entire codebase into OOP with the top level object named 'Agilette', i.e. little Agilent
Former-commit-id: e56154a56e67b690bfbb1ec3f0ee3bb756e3609a
Former-commit-id: 9de9357f4ac9e3fe02c664b25719c59d349f4d49

--- a/notebooks/2023-02-28_scipy.ipynb
+++ b/notebooks/2023-02-28_scipy.ipynb
@@ -60,44 +60,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f0aad17c-596a-4a4c-bcdd-87c4f3aaa21c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-02-28T05:52:28.700275Z",
-     "iopub.status.busy": "2023-02-28T05:52:28.699801Z",
-     "iopub.status.idle": "2023-02-28T05:52:28.737299Z",
-     "shell.execute_reply": "2023-02-28T05:52:28.736821Z",
-     "shell.execute_reply.started": "2023-02-28T05:52:28.700236Z"
+     "iopub.execute_input": "2023-03-01T22:49:13.403693Z",
+     "iopub.status.busy": "2023-03-01T22:49:13.403235Z",
+     "iopub.status.idle": "2023-03-01T22:49:13.857561Z",
+     "shell.execute_reply": "2023-03-01T22:49:13.857120Z",
+     "shell.execute_reply.started": "2023-03-01T22:49:13.403638Z"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'scripts.data_interface'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 13\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpathlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Path\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscripts\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_interface\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m retrieve_uv_data\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrainbow\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mrb\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'scripts.data_interface'"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47044cb4-6919-4243-99d6-9fed846f01e9",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-02-28T05:52:28.739573Z",
-     "iopub.status.busy": "2023-02-28T05:52:28.738935Z",
-     "iopub.status.idle": "2023-02-28T05:52:28.750359Z",
-     "shell.execute_reply": "2023-02-28T05:52:28.749902Z",
-     "shell.execute_reply.started": "2023-02-28T05:52:28.739550Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "%autoreload 2\n",
+    "\n",
     "import os\n",
     "import sys\n",
     "\n",
-    "sys.path.insert(0, os.path.abspath(os.path.join(os.path.dirname(__file__), '..')))"
+    "sys.path.insert(0, os.path.abspath(os.path.join(os.path.dirname(__file__), '..')))\n",
+    "\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "from scripts.data_interface import retrieve_uv_data\n",
+    "\n",
+    "import rainbow as rb\n",
+    "\n",
+    "import numpy as np"
    ]
   },
   {
@@ -116,18 +121,6 @@
    },
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
-    "from scripts.data_interface import retrieve_uv_data\n",
-    "\n",
-    "import rainbow as rb\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "from scripts.hplc_dad_plots import plot_3d_line\n",
-    "\n",
     "p = Path(\"/Users/jonathan/0_jono_data/2023-02-22_2021-DEBORTOLI-CABERNET-MERLOT_HALO.D\")\n",
     "\n",
     "print(p)\n",
