adds signal_metadata to the package, a module to read signal metadta from acq.macaml, primarily to output more detaield information about a Run_Dir object prior to loading the data (slow).
Former-commit-id: 7d9cb0859280b01975a6ccc15f9ea3cb5dfa09b6
Former-commit-id: f17553e81dca94bc34c0c7670cc87f6da7cf77a3

--- a/notebooks/2023-03-08_investigating_wavelength_maxima.ipynb
+++ b/notebooks/2023-03-08_investigating_wavelength_maxima.ipynb
@@ -65,6 +65,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -180,9 +185,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "the_run = avantor_runs[(avantor_runs['names'] == \"2021-debortoli-cabernet-merlot_avantor\") & (avantor_runs.index == '2023-02-23 12:21:12')]['path']\n",
+    "the_run_path = avantor_runs[(avantor_runs['names'] == \"2021-debortoli-cabernet-merlot_avantor\") & (avantor_runs['acq_date'] == '2023-02-23 12:21:12')]['path'].values[0]\n",
     "\n",
-    "the_run.values"
+    "the_run_path"
    ]
   },
   {
@@ -191,8 +196,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wine_uv_data = wine_run_dir.get_uv_data()\n",
-    "wine_uv_data.extract_uv_data()"
+    "run = lib.single_runs[the_run_path.name]\n",
+    "print(run.single_signals)\n"
    ]
   },
   {
@@ -201,7 +206,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wine_uv_data.uv_data.head()"
+    "print(run)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wine_uv_data = lib.single_runs[the_run_path.name].get_uv_data()"
    ]
   },
   {
