removes output from notebooks.. again!
Former-commit-id: ac03f00644a38715c0ece95a77fd452fcbf23e2f
Former-commit-id: 1a9ab0ed4fdc3d6fd4ba2d94eadbe925535bc34b

--- a/notebooks/debugging_uv_data.ipynb
+++ b/notebooks/debugging_uv_data.ipynb
@@ -1,39 +1,41 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Testing Processinmg Time of my Data Dir Through the Multiprocessing Package"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set up environment\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "\n",
-    "%timeit\n",
-    "import rainbow as rb\n",
-    "import multiprocessing as mp\n",
+    "import sys\n",
+    "\n",
     "import os\n",
-    "from pathlib import Path\n",
     "\n",
-    "p = Path(\"/Users/jonathan/0_jono_data/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create list of .D to process\n",
+    "import pandas as pd\n",
     "\n",
-    "d_list = [str(x) for x in p.glob(\"**/*.D\") if x.is_dir()]\n",
-    "len(d_list)"
+    "import numpy as np\n",
+    "\n",
+    "from scipy.signal import find_peaks\n",
+    "\n",
+    "pd.options.plotting.backend = 'plotly'\n",
+    "\n",
+    "import plotly.graph_objs as go\n",
+    "\n",
+    "from plotly.subplots import make_subplots\n",
+    "\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "from pybaselines import Baseline\n",
+    "\n",
+    "# adds root dir 'wine_analyis_hplc_uv' to path.\n",
+    "\n",
+    "sys.path.insert(0, os.path.abspath(os.path.join(os.getcwd(), '../')))\n",
+    "\n",
+    "from agilette import agilette_core as ag\n",
+    "\n",
+    "lib = ag.Agilette('/Users/jonathan/0_jono_data').library"
    ]
   },
   {
@@ -42,11 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pool = mp.Pool()\n",
-    "datadirs = pool.map(rb.read, d_list)\n",
-    "pool.close()\n",
-    "pool.join()\n",
-    " "
+    "lib_df = lib.data_table()"
    ]
   },
   {
@@ -55,7 +53,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datadirs[0].__dict__"
+    "run_spectrum = lib.all_data()[lib_df.iloc[0]['run_name']].load_spectrum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_spectrum.uv_data"
    ]
   },
   {
