adds "runs_to_load" to Library to select specific runs to load, use to reduce runtime for testing
Former-commit-id: e9f97481b7fd6db285e0d66b1224261bda77e3b5
Former-commit-id: 0f552827ee3d39c0c018a81f150244606ec45507

--- a/notebooks/2023-03-15_investigating-optimal-wavelength-for-all-runs.ipynb
+++ b/notebooks/2023-03-15_investigating-optimal-wavelength-for-all-runs.ipynb
@@ -372,15 +372,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calc_av_grad(column):\n",
-    "    grad = np.gradient(column)\n",
-    "    av = np.mean(grad)\n",
-    "    # returns a series with nm as index, avs as values.\n",
-    "    return(av)\n",
-    "\n",
-    "runs_uv['av_baseline_grads'] = runs_uv['scaled_baselines'].∏drop('mins').apply(lambda df: df.apply(calc_av_grad))\n",
-    "\n",
-    "runs_uv.loc[10, 'av_baseline_grads']"
+    "runs_uv.set_index('run_name').loc[:,'scaled_baselines']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For each row, I want to access the scaled_baselines df's, calculate the av. gradient for each wavelength there, then return the DF of the calculated av. gradient."
    ]
   },
   {
@@ -388,7 +388,206 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "runs_uv = runs_uv.drop_duplicates(subset = 'run_name')\n",
+    "runs_uv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runs_uv.set_index('run_name').loc[:,'scaled_baselines']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runs_uv = runs_uv.set_index('run_name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calc_av_grad(scaled_baseline_df):\n",
+    "\n",
+    "    av_grads = scaled_baseline_df.set_index('mins').apply(lambda column: np.mean(np.gradient(column)))\n",
+    "\n",
+    "    av_grads = pd.DataFrame(av_grads, columns = ['av_grads'])\n",
+    "\n",
+    "    return av_grads\n",
+    "\n",
+    "runs_uv['av_grads'] = runs_uv['scaled_baselines'].apply(func = calc_av_grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runs_uv['av_grads']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Peak Heights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runs_uv.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runs_uv['scaled_uv_data'].head(3)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Start with a pandas Series of dataframes containing scaled uv data.\n",
+    "2. For each column in the uv dataframe, find the peaks.\n",
+    "3. return the peaks and the x values as a dataframe object whose structure is nm: x_values | y_values.\n",
+    "\n",
+    "4. Put that back in to the main df with index run : wavelength df.\n",
+    "\n",
+    "So the overall structure is:\n",
+    "\n",
+    "run : peaks_wavelength_df : wavelength : x_values, y_values.\n",
+    "\n",
+    "How do I simulate that structure?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Create an empty DataFrame with the desired columns\n",
+    "df = pd.DataFrame(columns=['A', 'B'])\n",
+    "\n",
+    "# Create another DataFrame object to store as an element of the first DataFrame\n",
+    "df2 = pd.DataFrame({'C': [7, 8, 9], 'D': [10, 11, 12]})\n",
+    "\n",
+    "# Set the value of a specific row and column to the second DataFrame object\n",
+    "df.loc[0, 'B'] = df2\n",
+    "\n",
+    "# Print the resulting DataFrame\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_values = [1,2,3]\n",
+    "y_values = [4,5,6]\n",
+    "index = [0,1,2]\n",
+    "\n",
+    "wavelength = pd.DataFrame(zip(x_values, y_values), index = index, columns = ['x','y'])\n",
+    "\n",
+    "wavelength_series = pd.Series([wavelength])\n",
+    "wavelengths_df = pd.DataFrame(['wavelengths'])\n",
+    "\n",
+    "wavelength_df.loc[0,'wavelengths'] = wavelength_series\n",
+    "wavelength_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pandas.api.types import is_scalar\n",
+    "\n",
+    "def peak_finder(nm):\n",
+    "    \n",
+    "    print(nm.index)\n",
+    "    peaks = find_peaks(height = 0.05, x = nm)\n",
+    "\n",
+    "    # peaks[0] is the peak maxima indexes.\n",
+    "\n",
+    "    peaks_x = nm.index[peaks[0]].values\n",
+    "\n",
+    "    # peak[1] is a dict with information about the peaks including peak heights.\n",
+    "    peaks_y = peaks[1]['peak_heights']\n",
+    "\n",
+    "    assert is_scalar(peaks_x), f\"peaks_x is a scalar\"\n",
+    "    assert is_scalar(peaks_y), f\"peaks_y is a scalar\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runs_uv['peaks'][0].T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runs_uv.loc[runs_uv.index[0], 'peaks'].T.loc['190']"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Peak Height to Baseline Gradient Ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runs_uv.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ratio = av_peak_height / av_grads"
+   ]
   }
  ],
  "metadata": {
