ADDS extends the investigation. Adds a link to logbook referencing the work here. Adds a brief rationale.

--- a/notebooks/2023-03-30_testing-loading-full-library-spectrum.ipynb
+++ b/notebooks/2023-03-30_testing-loading-full-library-spectrum.ipynb
@@ -1,6 +1,38 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Investgating Data Collection Progress Thus Far\n",
+    "\n",
+    "i.e. 2023-03-30."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Refer to [2023-03-30_logbook](../../001_obsidian_vault/2023-03-31_logbook.md)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. What Runs are Appropriate for Analysis.\n",
+    "\n",
+    "Criteria: \n",
+    "\n",
+    "1. were on the Avantor 10cm column.\n",
+    "2. contain UV spectra.\n",
+    "3. Not uracil, acetone or coffee runs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -8,14 +40,11 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "\n",
     "import sys\n",
-    "import os\n",
+    "sys.path.append('../')\n",
     "from pathlib import Path\n",
     "\n",
-    "sys.path.insert(0, \"..\" / Path.cwd().absolute())\n",
-    "\n",
-    "from agilette.modules.library import Library"
+    "from agilette.modules.library import Library\n"
    ]
   },
   {
@@ -64,6 +93,32 @@
    "source": [
     "avantor_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avantor_df.describe()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "70 unique samples doesn't seem too bad. There should be more to pull sitting in the instrument as well. It appears that this filter is legitimate, as there is UV data for every remaining row.\n",
+    "\n",
+    "Now, one sticking point is that we don't have the wine names in this table. To get them we will need to load the sample tracker as a df and merge them on the sample ID., or 'name' in this dataframe. A further complicating factor is that the names are sometimes not consistant with sample tracker, for example '2021-debortoli-cabernet-merlot_avantor`. I dont believe it was ever added, and it makes up 7/107 of the runs. Let's first load sample_tracker then compare their contents."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -84,7 +139,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.11.1"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "27c46f4eb3a1e072bb472673e0f5bc67d135295985dc85bce54a4088e8c57ef4"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
