ADD functionalised the metadata table subsetter

--- a/notebooks/2023-03-30_testing-loading-full-library-spectrum.ipynb
+++ b/notebooks/2023-03-30_testing-loading-full-library-spectrum.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "lib = Library('/Users/jonathan/0_jono_data')\n",
-    "meta_df = lib.metadata_table"
+    "df = lib.metadata_table"
    ]
   },
   {
@@ -72,17 +72,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "avantor_df = meta_df[(meta_df['uv_filenames']!='') & (meta_df['acq_method'].str.contains('AVANTOR')) & ~(meta_df['name'].str.contains('uracil')) & ~(meta_df['name'].str.contains('coffee')) & ~(meta_df['name'].str.contains('lor'))]\n",
+    "def metadata_df_avantor_wine_subset(df : pd.DataFrame) -> pd.DataFrame:\n",
     "\n",
-    "avantor_df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    df = df[(df['uv_filenames']!='') & (df['acq_method'].str.contains('AVANTOR')) & ~(df['name'].str.contains('uracil')) & ~(df['name'].str.contains('coffee')) & ~(df['name'].str.contains('lor'))]\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "avantor_df = metadata_df_avantor_wine_subset(lib.metadata_table)\n",
+    "\n",
     "avantor_df.head()"
    ]
   },
