FIX in `dataframe_cleaner` was trying to assign a whole dataframe to a column during `.sort_values` and `.drop_duplicate` operations.

--- a/notebooks/2023-03-30_testing-loading-full-library-spectrum.ipynb
+++ b/notebooks/2023-03-30_testing-loading-full-library-spectrum.ipynb
@@ -179,15 +179,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "avantor_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# 1. Rename avantor 'name' to 'id' for consistancy.\n",
     "avantor_df = avantor_df.rename({'name' : 'id'}, axis = 1)\n",
     "\n",
@@ -195,13 +186,12 @@
     "\n",
     "def dataframe_cleaner(df : pd.DataFrame, col_name : str) -> pd.DataFrame:\n",
     "    df[col_name] = df[col_name].str.strip()\n",
-    "    df[col_name] = df.sort_values(col_name)\n",
-    "    df[col_name] = df.drop_duplicates(col_name)\n",
+    "    df = df.sort_values(col_name)\n",
+    "    df = df.drop_duplicates(col_name)\n",
     "    return df\n",
     "    \n",
+    "# todo: add subsetter to pipeline.\n",
     "avantor_df = (avantor_df.pipe(dataframe_cleaner, col_name='id'))\n",
-    "# avantor_df['id'] = avantor_df['id'].str.strip()\n",
-    "# avantor_df = avantor_df.sort_values('id').drop_duplicates('id')\n",
     "\n",
     "avantor_df.head()"
    ]
